<resources>
    <string name="app_name">Recoder</string>
    <string name="start_record">START RECORD</string>
    <string name="stop_record">STOP RECORD</string>
    <string name="select_file">SELECT File</string>
    <string name="start_play">START PLAY</string>
    <string name="pause">PAUSE</string>
    <string name="reset">RESET</string>
    <string name="record">RECORD</string>
    <string name="play">PLAY</string>
    <string name="time">TIME</string>
    <string name="sample_frequency">SAMPLING RATE</string>
    <string name="phase">PHASE</string>
    <string name="generate">GENERATE</string>
    <string name="frequency">FREQUENCY</string>
    <string name="send_text">Please input the text</string>
    <string name="send_text_button">Send Text</string>
    <string name="recv_text_input">Recv Text</string>
    <string name="start_recv_button">Start Recv</string>
    <string name="stop_recv_button">Stop Recv</string>
    <string name="start_locate">START LOCATE</string>
    <string name="recv_locate">RECV LOCATE</string>
    <string name="accuracy">Accuracy</string>
    <string name="generate_text">GENERATE TEXT</string>
    <string name="listen_locate">listen locate</string>
    <string name="stop_locate">stop locate</string>
</resources>
